--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@ p, ul, ol, table, dl {
 
     <h4>Finding Best Cloud Configuration for a given Software System</h4>
       <p>
-      This is a joint project with my colleague, <a href="http://kmweb.info// target="_blank" ">Chin-Jung Hsu</a>. We wanted to develop
+      This is a joint project with my colleague, <a href="http://kmweb.info/" target="_blank" ">Chin-Jung Hsu</a>. We wanted to develop
       fast searching techniques, which are efficient, effective and robust, to find the best configuration in the cloud. 
       The methods proposed uses low-level performance metrics to predict resource requirements which can be then used to 
       eliminate `less promising' configurations and hence searches only the spotlight region of the configuration space.
