--- a/index.html
+++ b/index.html
@@ -97,13 +97,13 @@ p, ul, ol, table, dl {
       <h1>Vivek Nair</h1>
       <p style="color:#FFE792; text-align:center">vivekaxl@gmail.com</p>
       <p style="text-align: center;font-size: 18px;">
-      <a href="http://vivekaxl.github.io/assets/VivekNair-Resume.pdf"  title="Resume" target="_blank" style="color: #FFDF00;font-size: 22px;"><i class="fas fa-file"></i></a>
-      <a href="https://www.linkedin.com/in/vivekaxl" target="_blank" style="color: #FFDF00;font-size: 23px;"><i class="fab fa-linkedin"></i></a>
-      <a href="https://github.com/vivekaxl" target="_blank" style="color: #FFDF00;font-size: 23px;"><i class="fab fa-github"></i></a>
-      <a href="https://twitter.com/vivekaxl" target="_blank" style="color: #FFDF00;font-size: 23px;"><i class="fab fa-twitter"></i></a>
-      <a href="https://www.quora.com/profile/Vivek-Nair-18" target="_blank" style="color: #FFDF00;font-size: 23px;"><i class="fab fa-quora"></i></a>
-      <a href="https://scholar.google.com/citations?user=C21LS6QAAAAJ&amp;hl=en" target="_blank" style="color: #FFDF00;font-size: 7.4px;"><i class="ai ai-google-scholar-square ai-3x"></i></a>
-      <a href="https://www.facebook.com/vivek.nair.5895834" target="_blank" style="color: #FFDF00;font-size: 23px;"><i class="fab fa-facebook"></i></a>
+      <a href="http://vivekaxl.github.io/assets/VivekNair-Resume.pdf"  title="Resume" target="_blank" style="color: #7fb084;font-size: 22px;"><i class="fas fa-file"></i></a>
+      <a href="https://www.linkedin.com/in/vivekaxl" target="_blank" style="color: #7fb084;font-size: 23px;"><i class="fab fa-linkedin"></i></a>
+      <a href="https://github.com/vivekaxl" target="_blank" style="color: #7fb084;font-size: 23px;"><i class="fab fa-github"></i></a>
+      <a href="https://twitter.com/vivekaxl" target="_blank" style="color: #7fb084;font-size: 23px;"><i class="fab fa-twitter"></i></a>
+      <a href="https://www.quora.com/profile/Vivek-Nair-18" target="_blank" style="color: #7fb084;font-size: 23px;"><i class="fab fa-quora"></i></a>
+      <a href="https://scholar.google.com/citations?user=C21LS6QAAAAJ&amp;hl=en" target="_blank" style="color: #7fb084;font-size: 7.4px;"><i class="ai ai-google-scholar-square ai-3x"></i></a>
+      <a href="https://www.facebook.com/vivek.nair.5895834" target="_blank" style="color: #7fb084;font-size: 23px;"><i class="fab fa-facebook"></i></a>
       </p>
     </nav>
 
@@ -112,13 +112,13 @@ p, ul, ol, table, dl {
       <a href="#default" id="logo">Vivek Nair</a>
       <div id="navbar-right" id="blah">
           <!-- <p style="text-align: center;font-size: 18px;"> -->
-          <a href="http://vivekaxl.github.io/assets/VivekNair-Resume.pdf"  title="Resume" target="_blank" style="color: #fa625f;font-size: 22px;"><i class="fas fa-file"></i></a>
-          <a href="https://www.linkedin.com/in/vivekaxl" target="_blank" style="color: #fa625f;font-size: 23px;"><i class="fab fa-linkedin"></i></a>
-          <a href="https://github.com/vivekaxl" target="_blank" style="color: #fa625f;font-size: 23px;"><i class="fab fa-github"></i></a>
-          <a href="https://twitter.com/vivekaxl" target="_blank" style="color: #fa625f;font-size: 23px;"><i class="fab fa-twitter"></i></a>
-          <a href="https://www.quora.com/profile/Vivek-Nair-18" target="_blank" style="color: #fa625f;font-size: 23px;"><i class="fab fa-quora"></i></a>
-          <a href="https://scholar.google.com/citations?user=C21LS6QAAAAJ&amp;hl=en" target="_blank" style="color: #fa625f;font-size: 7.4px;"><i class="ai ai-google-scholar-square ai-3x"></i></a>
-          <a href="https://www.facebook.com/vivek.nair.5895834" target="_blank" style="color: #fa625f;font-size: 23px;"><i class="fab fa-facebook"></i></a>
+          <a href="http://vivekaxl.github.io/assets/VivekNair-Resume.pdf"  title="Resume" target="_blank" style="color: #7fb084;font-size: 22px;"><i class="fas fa-file"></i></a>
+          <a href="https://www.linkedin.com/in/vivekaxl" target="_blank" style="color: #7fb084;font-size: 23px;"><i class="fab fa-linkedin"></i></a>
+          <a href="https://github.com/vivekaxl" target="_blank" style="color: #7fb084;font-size: 23px;"><i class="fab fa-github"></i></a>
+          <a href="https://twitter.com/vivekaxl" target="_blank" style="color: #7fb084;font-size: 23px;"><i class="fab fa-twitter"></i></a>
+          <a href="https://www.quora.com/profile/Vivek-Nair-18" target="_blank" style="color: #7fb084;font-size: 23px;"><i class="fab fa-quora"></i></a>
+          <a href="https://scholar.google.com/citations?user=C21LS6QAAAAJ&amp;hl=en" target="_blank" style="color: #7fb084;font-size: 7.4px;"><i class="ai ai-google-scholar-square ai-3x"></i></a>
+          <a href="https://www.facebook.com/vivek.nair.5895834" target="_blank" style="color: #7fb084;font-size: 23px;"><i class="fab fa-facebook"></i></a>
           <!-- </p> -->
       </div>
     </div>
