--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ body,h2,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 }
 h1{
   font-family: 'Libre Baskerville', sans-serif;
-  font-size: 30px;
+  font-size: 35px;
   font-weight: 700;
   line-height: 2em;
   border-bottom: none;
@@ -105,7 +105,7 @@ p, ul, ol, table, dl {
 <div class="content">
 <!-- Icon Bar (Sidebar - hidden on small screens) -->
     <nav class="w3-sidebar w3-bar-block w3-small w3-hide-small w3-center">
-      <img src="assets/picture-curious.jpg" alt="Vivek Nair" width="70%">
+      <img src="assets/picture-professional.png" alt="Vivek Nair" width="90%">
       <h1>Vivek Nair</h1>
       <p style="color:#FFE792; text-align:center">vivekaxl@gmail.com</p>
       <p style="text-align: center;font-size: 18px;">
